--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
  <head> 
   <meta charset="UTF-8"> 
-  <title>升学宴电子请柬</title> 
+  <title>请柬</title> 
   <style>
         body {
             font-family: Arial, sans-serif;
@@ -51,18 +51,17 @@
    <h1 id="v3">升学宴请柬</h1> 
    <div id="v4" class="message">
      亲爱的高中挚友
-    <p id="v5">谨定于本月十日，老家曹庄镇后湖村 举办本人升学宴，诚邀您参加，请共襄盛举。</p> 
+    <p id="v5">谨定于本月十日，老家曹庄镇后湖村 举办本人的升学宴，诚邀您共襄盛举。</p> 
    </div> 
    <div id="v6" class="event-details"> 
     <p id="v7" class="date-time">日期：2023年8月10日</p> 
     <p id="v8" class="time">时间：<strong>11:00</strong></p> 
-    <p id="v9" class="location">集合地点：曹庄镇站点</p> 
+    <p id="v9" class="location">地点：曹庄镇站点</p> 
    </div> 
    <p id="v10">须知: &nbsp;推荐乘坐 古城南关 公交站附近的 <strong id="v11">兴城——荒地</strong> 客车前往，半点整点发车 &nbsp; &nbsp;</p> 
    <p id="v12">届时本人在集合地点等候，将由家人接至目的地</p> &nbsp; 
-   <p id="v13">后续安排初步为前往葫芦岛市连山区及龙港区游玩，如有更佳安排会变动</p> 
    <p id="v14"></p> 
-   <h2 id="v15">期待您的光临！——赵思涵</h2> 
+   <h2 id="v15">期待您的到来！——赵思涵</h2> 
    <p></p> 
   </div>  
  </body>
