--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
    <h1 id="v3">升学宴请柬</h1> 
    <div id="v4" class="message">
      亲爱的高中挚友
-    <p id="v5">谨定于本月十日，老家曹庄镇后湖村 举办本人的升学宴，诚邀您共襄盛举。</p> 
+    <p id="v5">谨定于本月十日，在曹庄镇 举办本人的升学宴，诚邀您共襄盛举。</p> 
    </div> 
    <div id="v6" class="event-details"> 
     <p id="v7" class="date-time">日期：2023年8月10日</p> 
     <p id="v8" class="time">时间：<strong>11:00</strong></p> 
-    <p id="v9" class="location">地点：曹庄镇站点</p> 
+    <p id="v9" class="location">地点：曹庄镇</p> 
    </div> 
    <p id="v10">须知: &nbsp;推荐乘坐 古城南关 公交站附近的 <strong id="v11">兴城——荒地</strong> 客车前往，半点整点发车 &nbsp; &nbsp;</p> 
    <p id="v12">届时本人在集合地点等候，将由家人接至目的地</p> &nbsp; 
