--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
    <h1 id="v3">升学宴请柬</h1> 
    <div id="v4" class="message">
      亲爱的高中挚友
-    <p id="v5">谨定于本月十日，在曹庄镇 举办本人的升学宴，诚邀您共襄盛举。</p> 
+    <p id="v5">谨定于本月十日，在 兴城市曹庄镇 举办本人的升学宴，诚邀您共襄盛举。</p> 
    </div> 
    <div id="v6" class="event-details"> 
     <p id="v7" class="date-time">日期：2023年8月10日</p> 
