--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         body {
             font-family: Arial, sans-serif;
             text-align: center;
-            background-image: url('https://s2.loli.net/2023/07/27/ptKSZGU6zdBjWO3.jpg'); /* 替换为你喜欢的背景图片 URL */
+            background-image: url('https://s2.loli.net/2023/07/27/ptKSZGU6zdBjWO3.jpg');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -19,13 +19,15 @@
             margin: 50px auto;
             max-width: 600px;
             border-radius: 10px;
-            background-color: rgba(255, 255, 255, 0.5); /* 设置容器背景透明度 */
+            background-color: rgba(255, 255, 255, 0.5);
         }
 
         h1 {
             color: #FF4C47;
         }
-
+        h2 {
+            color: #000000;
+        }
         .message {
             font-size: 25px;
             margin-top: 20px;
@@ -88,13 +90,13 @@
 </head>
 <body>
 
-<h1>嗨，朋友，请点击按钮启函</h1>
+<h2>嗨，朋友，请启函</h2>
 
 <button id="enterButton" onclick="enterEvent()">点击开启</button>
 
 <div id="eventContainer" style="display: none;">
 <div class="container">
-    <h1>升学宴电子请柬</h1>
+    <h1>升学宴请柬</h1>
     <div class="message">
         亲爱的高中挚友，
         <p>谨定于本月十日，在曹庄镇举办本人的升学宴，诚邀您共襄盛举。</p >
@@ -107,7 +109,7 @@
     <p class="note">须知：推荐乘坐古城南关公交站附近的<strong>兴城——荒地</strong>客车前往，半点整点发车。</p >
     <p>届时本人在集合地点等候，将由家人接至目的地。</p >
     <p class="invitation">期待您的到来！——赵思涵</p >
-    <p class="footer">此电子请柬仅作为邀请函使用</p >
+    <p class="footer">此请柬仅作为邀请函使用</p >
 </div>
 
 
