--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
             max-width: 600px;
             border-radius: 10px;
             background-color: rgba(255, 255, 255, 0.5);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+            backdrop-filter: blur(12px);
         }
 
         h1 {
