--- a/index.html
+++ b/index.html
@@ -2,17 +2,38 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>升学宴电子请柬</title>
+    <title>升学宴请柬</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             text-align: center;
-            background-image: url('https://s2.loli.net/2023/07/27/ptKSZGU6zdBjWO3.jpg');
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
         }
 
+        .video-background {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: -1;
+            overflow: hidden;
+        }
+
+        .video-background video {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+        .backup-background {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-image: url('https://s2.loli.net/2023/07/27/ptKSZGU6zdBjWO3.jpg');
+            background-size: cover;
+            z-index: -2;
+        }
         .container {
             border: 1px solid #007BFF;
             padding: 20px;
@@ -115,11 +136,16 @@
 </div>
 
 
-<audio controls autoplay>
-    <source src="https://example.com/music.mp3" type="audio/mpeg">
-    Your browser does not support the audio element.
-</audio>
+<div class="video-background">
+    <video autoplay loop muted>
+        <source src="https://easylink.cc/53e94t" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
 </div>
+
+<div class="backup-background"></div>
+
+
 
 <script>
     function enterEvent() {
