--- a/index.html
+++ b/index.html
@@ -7,33 +7,12 @@
         body {
             font-family: Arial, sans-serif;
             text-align: center;
-        }
-
-        .video-background {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            z-index: -1;
-            overflow: hidden;
-        }
-
-        .video-background video {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
-        .backup-background {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-image: url('https://s2.loli.net/2023/07/27/ptKSZGU6zdBjWO3.jpg');
+            background-image: url('https://s2.loli.net/2023/07/27/NapwH82YkAK579s.jpg');
             background-size: cover;
-            z-index: -2;
+            background-position: center;
+            background-repeat: no-repeat;
         }
+
         .container {
             border: 1px solid #007BFF;
             padding: 20px;
@@ -134,17 +113,6 @@
     <p class="invitation">期待您的到来！——赵思涵</p >
     <p class="footer">此请柬仅作为邀请函使用</p >
 </div>
-
-
-<div class="video-background">
-    <video autoplay loop muted>
-        <source src="https://easylink.cc/53e94t" type="video/mp4">
-        Your browser does not support the video tag.
-    </video>
-</div>
-
-<div class="backup-background"></div>
-
 
 
 <script>
