--- a/index.html
+++ b/index.html
@@ -41,17 +41,19 @@
         }
 
         .date-time {
-            color: #007BFF;
+            color: #008000;
             font-size:  25px;
         }
 
         .time {
             font-size:  25px;
+            color: #008000;
         }
 
         .location {
             margin-top: 10px;
             font-size:  25px;
+            color: #008000;
         }
 
         .note {
@@ -62,7 +64,6 @@
 
         .invitation {
             font-size: 25px;
-            color: #008000;
         }
 
         .footer {
@@ -94,22 +95,22 @@
 
 <h2>嗨，朋友，请启函</h2>
 
-<button id="enterButton" onclick="enterEvent()">点击开启</button>
+<button id="enterButton" onclick="enterEvent()">开启</button>
 
 <div id="eventContainer" style="display: none;">
 <div class="container">
     <h1>升学宴请柬</h1>
     <div class="message">
-        亲爱的高中挚友，
+        亲爱的高中挚友
         <p>谨定于本月十日，在曹庄镇举办本人的升学宴，诚邀您共襄盛举。</p >
     </div>
     <div class="event-details">
-        <p class="date-time">日期：2023年8月10日</p >
+        <p class="date-time">日期：<strong>2023年8月10日</strong></p >
         <p class="time">时间：<strong>11:00</strong></p >
-        <p class="location">地点：曹庄镇</p >
+        <p class="location">地点：<strong>曹庄镇</strong></p >
     </div>
-    <p class="note">须知：推荐乘坐古城南关公交站附近的<strong>兴城——荒地</strong>客车前往，半点整点发车。</p >
-    <p>届时本人在集合地点等候，将由家人接至目的地。</p >
+    <p class="note">须知：推荐乘坐古城南关公交站附近的 <strong>兴城——荒地</strong> 客车前往，半点整点发车。</p >
+    <p>届时本人在集合地点等候，接至目的地。</p >
     <p class="invitation">期待您的到来！——赵思涵</p >
     <p class="footer">此请柬仅作为邀请函使用</p >
 </div>
