--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     <p class="note">须知：推荐乘坐古城南关公交站附近的 <strong>兴城——荒地</strong> 客车前往，半点整点发车。</p >
     <p>届时本人在集合地点等候，接至目的地。</p >
     <p class="invitation">期待您的到来！——赵思涵</p >
-    <p class="footer">此请柬仅作为邀请函使用</p >
+    <a href="https://cream-blue-64a.notion.site/07-31-7614946fb77949099f75b443c4982e4a"target="_blank">宴请名单</a>
 </div>
 
 
