--- a/index.html
+++ b/index.html
@@ -102,17 +102,17 @@
     <h1>升学宴请柬</h1>
     <div class="message">
         亲爱的高中挚友
-        <p>谨定于本月十日，在曹庄镇举办本人的升学宴，诚邀您共襄盛举。</p >
+        <p>谨定于本月九日，举办本人的升学宴，诚邀您共襄盛举。</p >
     </div>
     <div class="event-details">
-        <p class="date-time">日期：<strong>2023年8月10日</strong></p >
-        <p class="time">时间：<strong>11:00</strong></p >
-        <p class="location">地点：<strong>曹庄镇</strong></p >
+        <p class="date-time">日期：<strong>2023年8月9日</strong></p >
+        <p class="time">时间：<strong>[时间]:00</strong></p >
+        <p class="location">地点：<strong>葫芦岛市 龙港区 龙绣街 李员外菜馆</strong></p >
     </div>
-    <p class="note">须知：推荐乘坐古城南关公交站附近的 <strong>兴城——荒地</strong> 客车前往，半点整点发车。</p >
-    <p>届时本人在集合地点等候，接至目的地。</p >
+    <p>出行：乘坐 29路 至 <strong>军休家园</strong> 下车，全程约30分钟</p>
+       <p><strong>考虑到位置原因，本人会在兴城提前等候并与大家陪同乘车，请到达 东电疗养院(兴城1路站点) 即可</strong></p >
     <p class="invitation">期待您的到来！——赵思涵</p >
-    <a href="https://cream-blue-64a.notion.site/07-31-7614946fb77949099f75b443c4982e4a"target="_blank">宴请名单(入口已关闭）</a>
+    <a href="https://cream-blue-64a.notion.site/07-31-7614946fb77949099f75b443c4982e4a"target="_blank">宴请名单</a>
 </div>
 
 
