--- a/index.html
+++ b/index.html
@@ -106,11 +106,11 @@
     </div>
     <div class="event-details">
         <p class="date-time">日期：<strong>2023年8月9日</strong></p >
-        <p class="time">时间：<strong>[时间]:00</strong></p >
+        <p class="time">时间：<strong>9:00</strong></p >
         <p class="location">地点：<strong>葫芦岛市 龙港区 龙绣街 李员外菜馆</strong></p >
     </div>
     <p>出行：乘坐 29路 至 <strong>军休家园</strong> 下车，全程约30分钟</p>
-       <p><strong>考虑到位置原因，本人会在兴城提前等候并与大家陪同乘车，请到达 东电疗养院(兴城1路站点) 即可</strong></p >
+       <p><strong>考虑到位置原因，本人会在兴城提前等候并与大家陪同乘车，请 8:30 之前到达 东电疗养院(兴城1路站点)</strong></p >
     <p class="invitation">期待您的到来！——赵思涵</p >
     <a href="https://cream-blue-64a.notion.site/07-31-7614946fb77949099f75b443c4982e4a"target="_blank">宴请名单</a>
 </div>
