--- a/index.html
+++ b/index.html
@@ -109,9 +109,12 @@
         <p class="time">时间：<strong>10:00</strong></p >
         <p class="location">地点：<strong>葫芦岛市 龙港区 龙绣街 李员外菜馆</strong></p >
     </div>
-    <p>出行：乘坐 29路 至 <strong>军休家园</strong> 下车,全程约 30 分钟</p>
-    <p><strong>考虑到位置原因，本人会在兴城提前等候并与大家陪同乘车</p>
-    <p><strong>请 9:30 之前到达 东电疗养院 (兴城1路站点)</strong></p>
+    <p>出行：乘坐 29路 至 <strong>军休家园</strong> 下车</p>
+    <p>由于南辛庄桥修筑维护，以桥为分界线，分为两拨</p>
+    <p>在 东电疗养院 ，张鑫然 吴天亮 曹淞 娄馨予 王宇晴 张思贤 跟 我 走</p>
+    <p>在 南关，王犇 李英爱 陈家钰 刘津池 于金龙 跟 果莆强 走</p>
+    <p><strong>跟我走的，请 9:30 之前到达 东电疗养院</strong></p>
+    <p><strong>跟强子走的，互相商量</strong></p>
     <p class="invitation">期待您的到来！——赵思涵</p >
     <a href="https://cream-blue-64a.notion.site/07-31-7614946fb77949099f75b443c4982e4a"target="_blank">宴请名单</a>
 </div>
