--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>MyAPI</title>
 </head>
 <body>
-    <h1>关于</h1>
-    <p>由于信息门户第二天无法保持登录，离线模式下一卡通余额在第二天需要再次登录刷新</p>
+    <h1>注意</h1>
+    <p>经排查，信息门户第二天无法保持登录，离线模式一卡通余额在第二天需要再次登录刷新，之后当天可不用在登陆，正在寻找更优的解决方案</p>
 </body>
 </html>
