--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>注意</h1>
-    <p>经排查，信息门户第二天无法保持登录，离线模式一卡通余额在第二天需要再次登录刷新，之后当天可不用在登陆，正在寻找更优的解决方案</p>
+    <p>信息门户第二天无法保持登录,离线模式一卡通余额在第二天需要再次登录刷新,正在寻找更优的解决方案...其实不如直接登录看,优化后的加载速度并不慢了</p>
 </body>
 </html>
