--- a/success.html
+++ b/success.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <title>激活成功</title>
+    <title>验证成功</title>
     <style>
         body {
             margin: 0;
@@ -35,8 +35,8 @@
 </head>
 <body>
     <div class="message-box">
-        <h1>激活成功</h1>
-        <p>请返回APP重新登录</p>
+        <h1>验证成功</h1>
+        <p>请返回APP继续操作</p>
     </div>
 </body>
 </html>
